color variables (style tiles)

--- a/themes/woody/sass/variables-site/_colors.scss
+++ b/themes/woody/sass/variables-site/_colors.scss
@@ -1,4 +1,10 @@
-$color__background-body: #fff;
+$color__style-tile-1: #00aaff;
+$color__style-tile-2: #ffff00;
+$color__style-tile-3: #00aaaa;
+$color__style-tile-4: #ffffff;
+$color__style-tile-5: #000000;
+
+$color__background-body: $color__style-tile-4;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
@@ -8,10 +14,10 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__link: $color__style-tile-1;
+$color__link-visited: $color__style-tile-1;
+$color__link-hover: $color__style-tile-3;
+$color__text-main: $color__style-tile-5;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
