--- a/themes/woody/sass/variables-site/_typography.scss
+++ b/themes/woody/sass/variables-site/_typography.scss
@@ -1,4 +1,5 @@
-$font__main: sans-serif;
+$font__main: "Open Sans", Helvetica, sans-serif;
+$font__headings: "Oswald", sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
