--- a/themes/woody/sass/navigation/_menus.scss
+++ b/themes/woody/sass/navigation/_menus.scss
@@ -1,11 +1,15 @@
 .main-navigation {
+    background-color: #cccccc;
 	clear: both;
 	display: block;
 	float: left;
+    min-height: 2em;
 	width: 100%;
 
 	ul {
+
 		display: none;
+        float: right;
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
@@ -58,6 +62,7 @@
 	}
 	a {
 		display: block;
+        padding: .7em 0 .7em 1em;
 		text-decoration: none;
 	}
 
