--- a/themes/woody/style.css
+++ b/themes/woody/style.css
@@ -616,7 +616,9 @@ a {
   margin: 0 0 1.5em; }
 
 .boxed {
-  max-width: 1200px; }
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto; }
 
 /*--------------------------------------------------------------
 ## Asides
@@ -633,6 +635,19 @@ a {
 
 .bypostauthor {
   display: block; }
+
+/*--------------------------------------------------------------
+## Header
+--------------------------------------------------------------*/
+.site-branding {
+  float: left; }
+
+.header-secondary-info {
+  float: right; }
+
+.social-links,
+.share-your-story {
+  display: inline-block; }
 
 /*--------------------------------------------------------------
 # Infinite scroll
