--- a/themes/woody/sass/site/_site.scss
+++ b/themes/woody/sass/site/_site.scss
@@ -19,3 +19,8 @@
 ## Header
 --------------------------------------------------------------*/
 @import "primary/header";
+
+/*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
+@import "primary/footer";
