--- a/themes/woody/style.css
+++ b/themes/woody/style.css
@@ -650,6 +650,19 @@ a {
   display: inline-block; }
 
 /*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
+.footer-column {
+  display: block;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+  width: 25%; }
+
+.site-info {
+  text-align: center; }
+
+/*--------------------------------------------------------------
 # Infinite scroll
 --------------------------------------------------------------*/
 /* Globally hidden elements when Infinite Scroll is supported and in use. */
